Added Exa, NewsAPI, Tavily

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
+EXA_API_KEY=my_exa_key
+LINKUP_API_KEY=my_linkup_key
+NEWSAPI_API_KEY=my_newsapi_key
 PERPLEXITY_API_KEY=my_perplexity_key
 SYRACUSE_API_KEY=my_syracuse_key
-PERPLEXITY_ENDPOINT=https://api.perplexity.ai/chat/completions
-SYRACUSE_ENDPOINT=https://syracuse.1145.am/api/v1/activities
-LINKUP_API_KEY=my_linkup_key
+TAVILY_API_KEY=my_tavily_key
